--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "showtracker",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
+    "async": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.9.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "request": "^2.81.0",
+    "serve-favicon": "~2.3.2",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
