--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "agenda": "^0.9.1",
     "async": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.16.0",
@@ -10,11 +11,16 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "express-session": "^1.15.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.2",
     "morgan": "~1.7.0",
+    "nodemailer": "^3.1.8",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "request": "^2.81.0",
     "serve-favicon": "~2.3.2",
+    "sugar": "^2.0.4",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
