--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "~4.14.1",
     "express-session": "^1.15.2",
     "lodash": "^4.17.4",
+    "mongodb": "^2.2.25",
+    "mongodb-core": "^2.1.9",
     "mongoose": "^4.9.2",
+    "mongoskin": "^2.1.0",
     "morgan": "~1.7.0",
     "nodemailer": "^3.1.8",
     "passport": "^0.3.2",
