--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "showtracker",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start" : "node server.js"
+  },
   "dependencies": {
     "agenda": "^0.9.1",
     "async": "^2.2.0",
